--- a/Public/public/js/Public/css/styles.css
+++ b/Public/public/js/Public/css/styles.css
@@ -1,3 +1,51 @@
+
+
+body{
+font-family: Arial, Helvetica, sans-serif;    
+} 
+.container{
+    margin:0 auto;
+}
+.colorContainer{
+    display:flex;
+    gap:10px;
+}
+#item{
+    margin:40px 0;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:40px;
+}
+.color{
+    font-size: 30px;
+    border-radius:5px;
+    max-width: 400px;
+    max-height: 400px;
+    width:100%;
+    height:400px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color:white;
+    text-shadow: 1px 1px 2px rgb(0,0,0,0.7);
+}
+.tittle{
+display:flex;
+align-items:center;
+font-size: 30px;
+font-weight: bold;
+width: 200px;
+}
+form{
+    width:400px;
+    margin:0 auto;
+    padding:10px 0;
+    text-align: center;
+    display:flex;
+    flex-direction: column;
+    gap:10px;
+}
 input[type="text"]{
     padding:5px;
     display:flex;
@@ -8,7 +56,4 @@ input[type="submit"]{
     padding:10px 0;
     background-color: rgb(27,71,150);
     color:white;
-}
-body{
-    
 }
